--- a/meditation/templates/history.html
+++ b/meditation/templates/history.html
@@ -5,7 +5,7 @@
 {% endblock %}box
 
 {% block main %}
-<section class="table_section">
+<section class="table_section ">
     <table class="table">
         <thead>
             <tr>
@@ -20,7 +20,7 @@
             {% for history in user_history %}
             <tr class="table_row">
                 <td class="table_data">{{ history.date_of_meditation }}</td>
-                <td class="table_data table_moods">{{ history.moods_before_meditation |slice:", " }}</td>
+                <td class="table_data table_moods">{{ history.moods_before_meditation }}</td>
                 <td class="table_data">{{ history.song_name }}</td>
                 <td class="table_data">{{ history.meditation_duration }} Minutes</td>
             </tr>
