--- a/meditation/templates/attributes.html
+++ b/meditation/templates/attributes.html
@@ -2,7 +2,7 @@
 
 {% block title %}
     Attributes
-{% endblock %}box
+{% endblock %}
 
 {% block main %}
     <section class="ack">
@@ -30,7 +30,7 @@
             </tr>
              <tr class="table_row">
                 <td class="table_data">Koto Zen Garden</td>
-                <td><a href="https://www.youtube.com/watch?v=59vAvqo8Et0">ourlocationhistory</a></td>
+                <td><a href="https://www.youtube.com/watch?v=FpqivQ6P0s4">RelaxingTube</a></td>
             </tr>
              <tr class="table_row">
                 <td class="table_data">Meditative LoFi</td>
