--- a/meditation/templates/index.html
+++ b/meditation/templates/index.html
@@ -2,10 +2,9 @@
 
 {% block title %}
     Home
-{% endblock %}box
+{% endblock %}
 
 {% block main %}
-
 <section class="main_section">
     <div class="box box_one">
         <h4 class="block_title">How Are You Feeling Today</h4>
@@ -68,5 +67,4 @@
         </div>
     </form>
 </section>
-
 {% endblock %}
